# rtp-opus-streamer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
common/: Cargo.toml
common/src/: lib.rs  rtp.rs
common/src/cli/: color.rs  mod.rs
common/src/observability/: metrics.rs  mod.rs  tracing.rs
docs/: design.md
receiver/: Cargo.toml
receiver/src/: audio.rs  codec.rs  jitter_buffer.rs  lib.rs  main.rs  network.rs  rtp.rs  stats.rs
receiver/tests/: test_core_pipeline.rs
scripts/: ci-local.sh  test-all.sh  test-sender-receiver.sh
sender/: Cargo.toml
sender/src/: audio.rs  codec.rs  lib.rs  main.rs  network.rs  rtp.rs
tests/: network_simulator.rs  test_core_pipeline.rs  test_network_resilience.rs
