[workspace]
members = ["common", "sender", "receiver"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rtp-opus-streamer"

[workspace.dependencies]
# Audio
opus = "0.3"
hound = "3.5"
cpal = "0.15"

# Networking
tokio = { version = "1.35", features = ["full"] }

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

clap = { version = "4.4", features = ["derive"] }
rand = "0.8"

# Observability
prometheus = "0.13"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
atty = "0.2"
