[package]
name = "rtp-opus-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
prometheus.workspace = true
hyper.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
atty.workspace = true
tokio.workspace = true
