[package]
name = "receiver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "receiver"
path = "src/lib.rs"

[[bin]]
name = "receiver"
path = "src/bin/receiver.rs"

[dependencies]
rtp-opus-common = { path = "../common" }
opus.workspace = true
cpal.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
