[package]
name = "sender"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "sender"
path = "src/lib.rs"

[[bin]]
name = "sender"
path = "src/bin/sender.rs"

[dependencies]
rtp-opus-common = { path = "../common" }
opus.workspace = true
hound.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
rand.workspace = true
